chore(dockerfile): install `dnf-plugins-core` before enabling CRB repo in CUDA/ROCm base images

--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -86,8 +86,9 @@ EOF
 RUN ldconfig
 
 # Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
-# libqhull is in CRB (Code Ready Builder) repo
-RUN dnf config-manager --set-enabled crb && \
+# libqhull_r is in CRB (Code Ready Builder) repo
+RUN dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled crb && \
     dnf -y install \
     openmpi \
     libqhull_r \
