--- a/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
@@ -142,8 +142,9 @@ RUN dnf -y install \
     && dnf -y clean all --enablerepo="*"
 
 # Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
-# libqhull is in CRB (Code Ready Builder) repo
-RUN dnf config-manager --set-enabled crb && \
+# libqhull_r is in CRB (Code Ready Builder) repo
+RUN dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled crb && \
     dnf -y install \
     openmpi \
     libqhull_r \
