--- a/.tekton/odh-base-image-cuda-12-8-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-cuda-12-8-py312-ubi9-pull-request.yaml
@@ -41,6 +41,32 @@ spec:
     value: base-images/cuda/12.8/ubi9-python-3.12/Dockerfile.cuda
   - name: path-context
     value: .
+  # Added taskRunSpecs to increase compute resources
+  taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: clair-scan
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
+    - pipelineTaskName: ecosystem-cert-preflight-checks
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
   pipelineRef:
     name: multiarch-pull-request-pipeline
   taskRunTemplate:
