chore(tekton): add taskRunSpecs with increased compute resources for build-images task in ROCm 6.4 pipeline definitions

--- a/.tekton/odh-base-image-rocm-6-4-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-c9s-pull-request.yaml
@@ -42,6 +42,14 @@ spec:
     value: .
   # Added taskRunSpecs to increase compute resources
   taskRunSpecs:
+    - pipelineTaskName: build-images
+      computeResources:
+        requests:
+          cpu: '8'
+          memory: 32Gi
+        limits:
+          cpu: '8'
+          memory: 32Gi
     - pipelineTaskName: clair-scan
       computeResources:
         requests:
