RHAIENG-3072: Add CUDA 12.9 base images and update GPU runtime dependencies (#2895)
* chore(dockerfile): update CUDA 12.8 and 12.9 base images to add libs that AIPCC ships

* chore(dockerfile): update ROCm 6.4 base images to add OpenMP runtime and new ROCm libraries

* RHAIENG-3072: add CUDA 12.9 base images with Python 3.12 for both CentOS Stream 9 and UBI 9

* chore(dockerfile): add runtime dependencies for PyTorch (openmpi, qhull, snappy) across CUDA/ROCm base images

* test(base_image): skip FFmpeg-related dependencies for torchvision video_reader on unsupported platforms

* chore(dockerfile): replace individual ROCm library packages with meta-packages (`rocm-hip-libraries`, `rocm-ml-libraries`) in ROCm 6.4 base images

* chore(tekton): add taskRunSpecs with increased compute resources for clair-scan and preflight-check tasks

* chore(dockerfile): replace `qhull` with `libqhull` for PyTorch runtime dependencies in CUDA/ROCm base images

* chore(dockerfile): drop installation of runtime dependencies (openmpi, libqhull_r, snappy) in UBI9 images without RHEL entitlements

* chore(dockerfile): install `dnf-plugins-core` before enabling CRB repo in CUDA/ROCm base images

* chore(dockerfile): update `libcudss` to version 13 in CUDA 13.0 base image

* chore(dockerfile): update CUDA base images to version 12.9.1 and adjust runtime/library configurations

* chore(dockerfile): update library paths for CUDA runtime in CUDA 13.0 base image

* chore(dockerfile): update library paths to include `/usr/local/cuda/lib64` in CUDA 12.8 base images

* chore(tekton): add taskRunSpecs with increased compute resources for build-images, clair-scan, and preflight-check tasks

* chore(tekton): add taskRunSpecs with increased compute resources for build-images task in ROCm 6.4 pipeline definitions

--- a/base-images/cuda/12.8/c9s-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/12.8/c9s-python-3.12/Dockerfile.cuda
@@ -74,10 +74,11 @@ RUN dnf upgrade -y && dnf install -y \
 
 # nvidia-docker 1.0
 RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
-    echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
+    echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
+    echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/nvidia.conf
 
 ENV PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
-ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64
+ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64:/usr/local/cuda/lib64
 
 # nvidia-container-runtime
 ENV NVIDIA_VISIBLE_DEVICES=all
@@ -130,6 +131,26 @@ ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 # Install CUDA toolkit 12.8
 RUN dnf -y install cuda-toolkit-12-8 && \
     dnf -y clean all --enablerepo="*"
+
+# Install additional CUDA libraries needed by PyTorch
+# cuda-cupti: CUDA Profiling Tools Interface (libcupti.so)
+# libcusparselt0: cuSPARSELt for structured sparsity (libcusparseLt.so)
+# libcudss0-cuda-12: cuDSS direct sparse solver (libcudss.so)
+RUN dnf -y install \
+    cuda-cupti-12-8 \
+    libcusparselt0 \
+    libcudss0-cuda-12 \
+    && dnf -y clean all --enablerepo="*"
+
+# Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
+# libqhull_r is in CRB (Code Ready Builder) repo
+RUN dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled crb && \
+    dnf -y install \
+    openmpi \
+    libqhull_r \
+    snappy \
+    && dnf -y clean all --enablerepo="*"
 
 # Restore user workspace
 USER 1001
