--- a/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
@@ -73,11 +73,10 @@ RUN dnf upgrade -y && dnf install -y \
     && rm -rf /var/cache/yum/*
 
 # nvidia-docker 1.0
-RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
-    echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
+RUN echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/nvidia.conf
 
 ENV PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
-ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64
+ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64:/usr/local/cuda/lib64
 
 # nvidia-container-runtime
 ENV NVIDIA_VISIBLE_DEVICES=all
@@ -130,6 +129,26 @@ ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 # Install CUDA toolkit 13.0
 RUN dnf -y install cuda-toolkit-13-0 && \
     dnf -y clean all --enablerepo="*"
+
+# Install additional CUDA libraries needed by PyTorch
+# cuda-cupti: CUDA Profiling Tools Interface (libcupti.so)
+# libcusparselt0: cuSPARSELt for structured sparsity (libcusparseLt.so)
+# libcudss0-cuda-13: cuDSS direct sparse solver (libcudss.so)
+RUN dnf -y install \
+    cuda-cupti-13-0 \
+    libcusparselt0 \
+    libcudss0-cuda-13 \
+    && dnf -y clean all --enablerepo="*"
+
+# Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
+# libqhull_r is in CRB (Code Ready Builder) repo
+RUN dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled crb && \
+    dnf -y install \
+    openmpi \
+    libqhull_r \
+    snappy \
+    && dnf -y clean all --enablerepo="*"
 
 # Restore user workspace
 USER 1001
