--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -62,12 +62,17 @@ RUN echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     echo "enabled=1" >> /etc/yum.repos.d/amdgpu.repo && \
     echo "gpgcheck=0" >> /etc/yum.repos.d/amdgpu.repo && \
     dnf install -y \
-      rocm-core hip-runtime-amd \
+    # HIP (Heterogeneous-compute Interface for Portability) libraries meta-package
+    # Includes: hipblas, hipblaslt, hipfft, hiprand, hipsolver, hipsparse, hipsparselt,
+    # hiptensor, rccl, rocalution, rocblas, rocfft, rocm-core, rocm-smi-lib, rocrand,
+    # rocsolver, rocsparse
+      rocm-hip-libraries \
     # system utilities
-      rocm-smi-lib rocminfo \
-      rocblas rocsolver rocfft rocrand rocsparse miopen-hip rccl \
-    # HIP (Heterogeneous-compute Interface for Portability)
-      hipblas hipblaslt hipfft hipsparse hiprand hipsolver \
+      rocminfo amd-smi-lib \
+    # ML libraries (includes miopen-hip)
+      rocm-ml-libraries \
+    # OpenMP runtime support
+      openmp-extras-runtime \
     # suitesparse's /lib64/libspqr.so.2.0.9 needs libtbb.so.2
       tbb && \
     dnf clean all && rm -rf /var/cache/yum
@@ -79,6 +84,16 @@ RUN tee --append /etc/ld.so.conf.d/rocm.conf <<EOF
 EOF
 
 RUN ldconfig
+
+# Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
+# libqhull_r is in CRB (Code Ready Builder) repo
+RUN dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled crb && \
+    dnf -y install \
+    openmpi \
+    libqhull_r \
+    snappy \
+    && dnf -y clean all --enablerepo="*"
 
 # Restore user workspace
 USER 1001
