RHAIENG-1722: add AIPCC-enabled pylocks for Jupyter PyTorch (CUDA/ROCm) (#2880)
* RHAIENG-1722: chore(pylocks): add AIPCC-enabled pylocks for jupyter/pytorch

Updates Jupyter PyTorch images (CUDA and ROCm) to use AIPCC (RHOAI 3.3) index:

CUDA (jupyter/pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=cuda to build-args/cuda.conf
- Update Dockerfile.cuda to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Remove AIPCC phase 1.5 workaround (PIP_INDEX_URL override)
- Generate pylock.cuda.toml with AIPCC 3.3 CUDA index

ROCm (jupyter/rocm/pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=rocm to build-args/rocm.conf
- Update Dockerfile.rocm to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Remove AIPCC phase 1.5 workaround (PIP_INDEX_URL override)
- Generate pylock.rocm.toml with AIPCC 3.3 ROCm index

PyTorch package updates:
- torch: 2.7.1+cu128/rocm6.3 → 2.9.0 (AIPCC version)
- torchvision: 0.22.1+cu128/rocm6.3 → 0.24.0 (AIPCC version)
- pytorch-triton-rocm → triton~=3.5.0 (ROCm only, AIPCC package name)

Datascience dependency updates (same as RHAIENG-1721):
- boto3, kfp, plotly, scikit-learn, onnxconverter-common, psycopg, pyodbc, mysql-connector-python

Temporary workarounds (GA blockers):
- codeflare-sdk commented out (RHAIENG-3039)
- feast downgraded to ~=0.58.0 (RHAIENG-3041)

Override dependencies:
- python-lsp-server>=1.11.0 (AIPCC-8698)

Jira: RHAIENG-1722

* chore(pyproject.toml): add missing kfp-pipeline-spec and google-cloud-storage workarounds for ROCm and CUDA indexes

* RHAIENG-1729: chore(pylocks): add AIPCC-enabled pylocks for runtime pytorch

Updates runtimes/pytorch and runtimes/rocm-pytorch for AIPCC (RHOAI 3.3) index:

CUDA (runtimes/pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=cuda to build-args/cuda.conf
- Update Dockerfile.cuda to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Remove AIPCC phase 1.5 workaround (PIP_INDEX_URL override)
- Generate pylock.cuda.toml with AIPCC 3.3 index

ROCm (runtimes/rocm-pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=rocm 

--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Dockerfile.cuda
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Dockerfile.cuda
@@ -148,16 +148,9 @@ FROM cuda-jupyter-datascience AS cuda-jupyter-pytorch
 
 ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
 ARG PYTORCH_SOURCE_CODE=jupyter/pytorch+llmcompressor/ubi9-python-3.12
+ARG PYLOCK_FLAVOR
 
 WORKDIR /opt/app-root/bin
-
-### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
-ENV PIP_INDEX_URL=https://pypi.org/simple
-# UV_INDEX_URL is deprecated in favor of UV_DEFAULT_INDEX
-ENV UV_INDEX_URL=https://pypi.org/simple
-# https://docs.astral.sh/uv/reference/environment/#uv_default_index
-ENV UV_DEFAULT_INDEX=https://pypi.org/simple
-### END RHAIENG-2189: this is AIPCC migration phase 1.5
 
 LABEL name="odh-notebook-jupyter-cuda-pytorch-llmcompressor-ubi9-python-3.12" \
     summary="Jupyter CUDA pytorch-llmcompressor notebook image for ODH notebooks" \
@@ -170,7 +163,7 @@ LABEL name="odh-notebook-jupyter-cuda-pytorch-llmcompressor-ubi9-python-3.12" \
     io.openshift.build.image="quay.io/opendatahub/workbench-images:cuda-jupyter-pytorch-llmcompressor-ubi9-python-3.12"
 
 # Install Python packages and Jupyterlab extensions from requirements.txt
-COPY ${PYTORCH_SOURCE_CODE}/pylock.toml ./
+COPY ${PYTORCH_SOURCE_CODE}/uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml ./pylock.toml
 
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
