--- a/runtimes/rocm-pytorch/ubi9-python-3.12/build-args/rocm.conf
+++ b/runtimes/rocm-pytorch/ubi9-python-3.12/build-args/rocm.conf
@@ -1,5 +1,2 @@
-# Base Image   : RHEL 9.6 with Python 3.12
-# ROCm Version : 6.3.4
-# Architectures: linux/x86_64
-# Source       : https://quay.io/repository/aipcc/base-images/rocm
-BASE_IMAGE=quay.io/aipcc/base-images/rocm:3.0-1755080929
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-rocm-py312-ubi9:v6.2
+PYLOCK_FLAVOR=rocm
