RHAIENG-3059: Replace static pylock file references with dynamic `PYLOCK_FLAVOR` resolution across Dockerfiles, removing deprecated AIPCC 1.5 overrides (#1871)
* Add `PYLOCK_FLAVOR` for dynamic lockfile configuration across all build-args (CPU, CUDA, ROCm).

* RHAIENG-3059: Replace static pylock file references with dynamic `PYLOCK_FLAVOR` resolution across Dockerfiles, removing deprecated AIPCC 1.5 overrides.

* bash ci/generate_code.sh

--- a/rstudio/rhel9-python-3.12/build-args/konflux.cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/konflux.cpu.conf
@@ -2,3 +2,4 @@
 # Architectures: linux/arm64, linux/ppc64le, linux/x86_64, linux/s360x
 # Source       : https://quay.io/repository/aipcc/base-images/cpu
 BASE_IMAGE=quay.io/aipcc/base-images/cpu:3.3.0-1768412357
+PYLOCK_FLAVOR=cpu
