--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/build-args/konflux.cuda.conf
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/build-args/konflux.cuda.conf
@@ -3,3 +3,4 @@
 # Architectures: linux/arm64, linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/cuda
 BASE_IMAGE=quay.io/aipcc/base-images/cuda-12.9-el9.6:3.3.0-1768412345
+PYLOCK_FLAVOR=cuda
