--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/build-args/konflux.rocm.conf
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/build-args/konflux.rocm.conf
@@ -3,3 +3,4 @@
 # Architectures: linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/rocm
 BASE_IMAGE=quay.io/aipcc/base-images/rocm-6.4-el9.6:3.3.0-1768412209
+PYLOCK_FLAVOR=rocm
