RHAIENG-2640: Start new "name: 3.4" metadata tag in all images except RStudio
* Add annotations and metadata for Python 3.12 and CUDA/ROCm compatibility across all imagestreams.

* Update `notebook-python-dependencies` and `notebook-software` fields with package versions for JupyterLab, PyTorch, TensorFlow, TrustyAI, and related dependencies.

* Add `opendatahub.io/workbench-image-recommended` and `openshift.io/imported-from` labels.

<details>

```python
"""
Merge manifest tags from opendatahub-io/notebooks into red-hat-data-services/notebooks.

This script fetches manifests/base/*.yaml files from red-hat-data-services/notebooks,
extracts a specific tag from the corresponding opendatahub-io/notebooks file,
renames it, and inserts it at the beginning of the tags array.
"""

from __future__ import annotations

import argparse
import copy
import json
import math
import pathlib
import subprocess
import sys
from typing import Any

from ruamel.yaml import YAML

def fetch_file_from_github(owner: str, repo: str, path: str, ref: str) -> str | None:
    """Fetches raw file content from GitHub using the gh CLI."""
    try:
        result = subprocess.run(
            [
                "gh",
                "api",
                f"/repos/{owner}/{repo}/contents/{path}?ref={ref}",
                "-H",
                "Accept: application/vnd.github.raw+json",
            ],
            capture_output=True,
            text=True,
            check=True,
        )
        return result.stdout
    except subprocess.CalledProcessError as e:
        if "404" in e.stderr:
            return None
        print(f"Error fetching {owner}/{repo}/{path}@{ref}: {e.stderr}", file=sys.stderr)
        return None

def list_files_in_directory(owner: str, repo: str, path: str, ref: str) -> list[str]:
    """Lists files in a directory from GitHub using the gh CLI."""
    try:
        result = subprocess.run(
            [
                "gh",
                "api",
                f"/repos/{ow

--- a/manifests/base/jupyter-minimal-gpu-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-minimal-gpu-notebook-imagestream.yaml
@@ -34,6 +34,28 @@ spec:
       from:
         kind: DockerImage
         name: odh-workbench-jupyter-minimal-cuda-py312-ubi9-n_PLACEHOLDER
+      name: "3.4"
+      referencePolicy:
+        type: Source
+    # N - 1 Version of the image
+    - annotations:
+        # language=json
+        opendatahub.io/notebook-software: |
+          [
+            {"name": "CUDA", "version": "12.8"},
+            {"name": "Python", "version": "v3.12"}
+          ]
+        # language=json
+        opendatahub.io/notebook-python-dependencies: |
+          [
+            {"name": "JupyterLab", "version": "4.4"}
+          ]
+        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        opendatahub.io/workbench-image-recommended: 'true'
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cuda-py312-ubi9-commit-n_PLACEHOLDER
+      from:
+        kind: DockerImage
+        name: odh-workbench-jupyter-minimal-cuda-py312-ubi9-n_PLACEHOLDER
       name: "2025.2"
       referencePolicy:
         type: Source
