--- a/manifests/base/jupyter-rocm-minimal-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-minimal-notebook-imagestream.yaml
@@ -51,7 +51,7 @@ spec:
             {"name": "JupyterLab", "version": "4.4"}
           ]
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
-        opendatahub.io/workbench-image-recommended: 'true'
+        opendatahub.io/workbench-image-recommended: 'false'
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-rocm-py312-ubi9-commit-n_PLACEHOLDER
       from:
         kind: DockerImage
