Fix `opendatahub.io/workbench-image-recommended` annotation to `opendatahub.io/image-tag-outdated` across all 2025.1 ImageStream manifests.

--- a/manifests/base/jupyter-minimal-gpu-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-minimal-gpu-notebook-imagestream.yaml
@@ -73,7 +73,7 @@ spec:
             {"name": "JupyterLab", "version": "4.4"}
           ]
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
-        opendatahub.io/workbench-image-recommended: 'false'
+        opendatahub.io/image-tag-outdated: "true"
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cuda-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
