--- a/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
@@ -127,7 +127,7 @@ spec:
             {"name": "Kubeflow-Training", "version": "1.9"}
           ]
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
-        opendatahub.io/workbench-image-recommended: 'false'
+        opendatahub.io/image-tag-outdated: "true"
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-pytorch-rocm-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
