--- a/manifests/base/jupyter-minimal-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-minimal-notebook-imagestream.yaml
@@ -26,9 +26,30 @@ spec:
           [
             {"name": "JupyterLab","version": "4.5"}
           ]
-        openshift.io/imported-from: quay.io/modh/cuda-notebooks
+        openshift.io/imported-from: quay.io/opendatahub/workbench-images
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/default-image: "true"
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py312-ubi9-commit-n_PLACEHOLDER
+      from:
+        kind: DockerImage
+        name: odh-workbench-jupyter-minimal-cpu-py312-ubi9-n_PLACEHOLDER
+      name: "3.4"
+      referencePolicy:
+        type: Source
+    # N - 1 Version of the image
+    - annotations:
+        # language=json
+        opendatahub.io/notebook-software: |
+          [
+            {"name": "Python", "version": "v3.12"}
+          ]
+        # language=json
+        opendatahub.io/notebook-python-dependencies: |
+          [
+            {"name": "JupyterLab","version": "4.4"}
+          ]
+        openshift.io/imported-from: quay.io/modh/cuda-notebooks
+        opendatahub.io/workbench-image-recommended: 'false'
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py312-ubi9-commit-n_PLACEHOLDER
       from:
         kind: DockerImage
@@ -36,7 +57,7 @@ spec:
       name: "2025.2"
       referencePolicy:
         type: Source
-    # N - 1 Version of the image
+    # N - 2 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -49,7 +70,7 @@ spec:
             {"name": "JupyterLab", "version": "4.4"}
           ]
         openshift.io/imported-from: quay.io/modh/cuda-notebooks
-        opendatahub.io/workbench-image-recommended: 'false'
+        opendatahub.io/image-tag-outdated: "true"
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
@@ -57,7 +78,7 @@ spec:
       name: "2025.1"
       referencePolicy:
         type: Source
-    # N - 2  Version of the image
+    # N - 3 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -78,7 +99,7 @@ spec:
       name: "2024.2"
       referencePolicy:
         type: Source
-    # N - 3 Version of the image
+    # N - 4 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -100,7 +121,7 @@ spec:
       name: "2024.1"
       referencePolicy:
         type: Source
-    # N - 4 Version of the image
+    # N - 5 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -122,7 +143,7 @@ spec:
       name: "2023.2"
       referencePolicy:
         type: Source
-    # N - 5 Version of the image
+    # N - 6 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -144,7 +165,7 @@ spec:
       name: "2023.1"
       referencePolicy:
         type: Source
-    # N - 6 Version of the image
+    # N - 7 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
