--- a/.github/workflows/build-notebooks-pr-rhel.yaml
+++ b/.github/workflows/build-notebooks-pr-rhel.yaml
@@ -60,6 +60,7 @@ jobs:
 
       - uses: actions/setup-go@v6
         with:
+          go-version: "stable"
           cache-dependency-path: "**/*.sum"
 
       - name: Determine targets to build based on changed files
